2007-07-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.Editor/CatalogEntry.cs,
	  MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs: Improved reference
	  update code. Fixed comment handling and some translation editor
	  behavior issues.

2007-07-18  Mike Krüger <mike@icsharpcode.net> 

	* MonoDevelop.Gettext.Editor/CatalogEntry.cs,
	  MonoDevelop.Gettext.Editor/CatalogEditor.cs,
	  MonoDevelop.Gettext.Editor/CatalogDeletedEntry.cs,
	  MonoDevelop.Gettext.Editor/CatalogHeaders.cs,
	  MonoDevelop.Gettext.Editor/CatalogParser.cs,
	  MonoDevelop.Gettext.Editor/POEditorWidget.cs,
	  MonoDevelop.Gettext.Editor/Catalog.cs,
	  gtk-gui/MonoDevelop.Gettext.POEditorWidget.cs,
	  MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs: Worked on gettext addin.
	  New (stetic based) editor, some fixes.

2007-07-13  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProject.cs: Worked on translation
	  addin.

2007-07-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Gettext.addin.xml,
	  gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs,
	  MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs,
	  MonoDevelop.Gettext/TranslationService.cs,
	  MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs,
	  MonoDevelop.Gettext/TranslationProject.cs,
	  templates/TranslationProject.xpt.xml: Worked on translation project
	  options.

2007-07-11  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Gettext.TranslationProjectOptionsDialog.cs,
	MonoDevelop.Gettext/TranslationProjectOptionsDialog.cs,
	MonoDevelop.Gettext/MonoDevelop.Gettext/TranslationProject.cs,
	MonoDevelop.Gettext/TranslationService.cs,
	MonoDevelop.Gettext.NodeBuilders/TranslationProjectNodeBuilder.cs: Fixed 
	little bug. Added options dialog.
