@@ -1,5 +1,9 @@
 2007-07-19  Mike Krüger <mkrueger@novell.com> 
 
+	* MonoDevelop.Gettext.Editor/POEditorWidget.cs: changed formatting.
+
+2007-07-19  Mike Krüger <mkrueger@novell.com> 
+
 	* MonoDevelop.Gettext.Editor/CatalogEntry.cs,
 	  MonoDevelop.Gettext.Editor/POEditorWidget.cs,
 	  MonoDevelop.Gettext/TranslationService.cs,
